# bozos

./: Cargo.toml  README.md  justfile
scripts/: dl_and_compile_bozos.sh
settings/: keys.toml
src/: lib.rs  main.rs  plugin_def.rs
src/plugins/: camera.rs  console.rs  keys.rs  mod.rs  test.rs  world_loading.rs
src/resources/: blocks.rs  create_3d_ressource.rs  mod.rs  path.rs
src/utils/: file_manager.rs  mod.rs
