[package]
name = "bozos"
version = "0.1.0"
edition = "2024"

[dependencies]
# Remove the feature "bevy/dynamic_linking" for release builds.
bevy = { version = "0.16", features = ["dynamic_linking", "serialize"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
